--- a/collectionutils/src/main/AndroidManifest.xml
+++ b/collectionutils/src/main/AndroidManifest.xml
@@ -2,4 +2,5 @@
     package="com.dz.utlis" >
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 </manifest>
