--- a/collectionutils/build.gradle
+++ b/collectionutils/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation 'com.android.support:design:26.1.0'
 }
 //添加
 publish {
