--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,12 +24,18 @@ android {
         abortOnError false
     }
 
+    //处理所有报META-INF/*'的错误
+    packagingOptions {
+        pickFirst 'META-INF/atomicfu.kotlin_module'
+
+    }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.0-alpha'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation project(':collectionutils')
 }
