--- a/collectionutils/build.gradle
+++ b/collectionutils/build.gradle
@@ -1,7 +1,10 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'com.novoda.bintray-release'//添加
+
+apply plugin: 'com.github.dcendents.android-maven'    // 添加本行
+group='com.github.zhengzaihong'    // 添加本行
+
 android {
     compileSdkVersion 28
 
@@ -39,21 +42,28 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
-//添加
-publish {
-    artifactId = 'rjtools'
-    userOrg = 'zhengzaihong'
-    groupId = 'com.zzh'
-    uploadName = "androidTools"
-    publishVersion = '1.0.84'
-    desc = 'Common tool classes'
-    website = 'https://github.com/zhengzaihong/Utils.git'
-}
 
-tasks.withType(Javadoc) {
-    options {
-        encoding "UTF-8"
-        charSet 'UTF-8'
-        links "http://docs.oracle.com/javase/7/docs/api"
-    }
+// 指定编码
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
+// 打包源码
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
+task javadoc(type: Javadoc) {
+    failOnError false
+    source = android.sourceSets.main.java.sourceFiles
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    classpath += configurations.compile
+}
+// 制作文档(Javadoc)
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+artifacts {
+    archives sourcesJar
+    archives javadocJar
 }
